# toggl-rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: auth.rs  lib.rs  main.rs  project.rs  time_entry.rs  user.rs  workspace.rs
toggl_cli/: Cargo.toml
toggl_cli/src/: main.rs
toggl_rs/: Cargo.toml
toggl_rs/src/: auth.rs  client.rs  error.rs  lib.rs  project.rs  return_types.rs  time_entry.rs  types.rs  user.rs  workspace.rs
