[package]
name = "toggl"
version = "0.2.0"
authors = ["Kellen Frodelius-Fujimoto <kellen@kellenfujimoto.com>",
           "Christian Engels <Narfinger@users.noreply.github.com"]
edition = "2018"
description = "A typed interface to the Toggl v8 API"
repository = "https://github.com/rakenodiax/toggl-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
clap = "2.33.0"
toggl_rs = {path = "../toggl_rs"}
