[package]
name = "toggl_rs"
version = "0.2.0"
authors = ["Kellen Frodelius-Fujimoto <kellen@kellenfujimoto.com>",
            "Christian Engels <Narfinger@users.noreply.github.com"]
edition = "2018"
description = "A typed interface to the Toggl v8 API"
repository = "https://github.com/rakenodiax/toggl-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
chrono = { version ="0.4", features = ["serde"] }
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
